--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2639,4 +2639,35 @@
     version: ""
     engine: WebKit
     engine_version: "605.1.15"
-
+-
+  user_agent: Mozilla/5.0 (Android 10; Mobile; rv:81.0) Gecko/81.0 Firefox/81.0/TansoDL
+  client:
+    type: browser
+    name: Kode Browser
+    version: ""
+    engine: Gecko
+    engine_version: "81.0"
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 11_1_2 like Mac OS X) AppleWebKit/604.3.5 (KHTML, like Gecko) Mobile/15B202/TansoDL
+  client:
+    type: browser
+    name: Kode Browser
+    version: ""
+    engine: WebKit
+    engine_version: 604.3.5
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) KodeiOS/3.16b3.16.3 Mobile/15E148 Safari/605.1.15 /TansoDL
+  client:
+    type: browser
+    name: Kode Browser
+    version: "3.16"
+    engine: WebKit
+    engine_version: 605.1.15
+-
+  user_agent: Kode/3.21.2 CFNetwork/1206 Darwin/20.1.0
+  client:
+    type: browser
+    name: Kode Browser
+    version: 3.21.2
+    engine: ""
+    engine_version: ""
