--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -191,6 +191,8 @@ Microsoft:
       model: 'Lumia 640 LTE Dual SIM'
     - regex: 'Lumia 640 LTE'
       model: 'Lumia 640 LTE'
+    - regex: 'Lumia 640 Dual SIM'
+      model: 'Lumia 640 Dual SIM'
     - regex: 'RM-1109|RM-1113|RM-107[23467]|Lumia 640'
       model: 'Lumia 640'
     - regex: 'RM-1154|Lumia 650'
