--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6372,7 +6372,7 @@ Huawei:
       model: 'Y5 Pro (2017)'
     - regex: 'CUN-(?:L(?:0[123]|2[123]|33)|U29)(?:[);/ ]|$)'
       model: 'Y5II'
-    - regex: 'SCC-U21(?:[);/ ]|$)'
+    - regex: '(?:SCC-U21|SCL-U31)(?:[);/ ]|$)'
       model: 'Y6'
     - regex: 'MYA-L11(?:[);/ ]|$)'
       model: 'Y6 (2016)'
@@ -6558,11 +6558,13 @@ Huawei:
 
 # Hyundai
 Hyundai:
-  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|G(24027|2552[34])K|W25042L|HP554O'
+  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|G(24027|2552[34])K|W25042L|HP554O|Seoul S8'
   device: 'smartphone'
   models:
     - regex: 'Ultra (Active|Air|Charm|Dream|Energy Lite|Energy Plus|Energy|Latitude|Link|Live II|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)'
       model: 'Ultra $1'
+    - regex: 'Seoul S8'
+      model: 'Seoul S8'
     - regex: 'G25523K'
       model: 'Eternity G23'
     - regex: 'G25524K'
@@ -11184,9 +11186,7 @@ Rombica:
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
-    - regex: 'Rombica Smart Box v(00[3478])(?:[);/ ]|$)'
-      model: 'Smart Box v$1'
-    - regex: '(Infinity K8|Smart Box (?:v005|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
+    - regex: '(Infinity K8|Smart Box (?:v00[34578]|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
       model: '$1'
 
 # Rover
@@ -12374,6 +12374,8 @@ Sencor:
       model: 'Element 9.7'
     - regex: '(?:SENCOR[ _])?ELEMENT10[ _]1'
       model: 'Element 10.1'
+    - regex: '(?:SENCOR[ _])?(7Q105)(?:[);/ ]|$)'
+      model: '$1'
 
     - regex: '(?:SENCOR[ _])?ELEMENT[ _]?P([0-9]+)'
       model: 'Element P$1'
@@ -17016,14 +17018,14 @@ Kuliao:
 
 # Sugar
 Sugar:
-  regex: 'SUGAR (?:C[12]1|[YF]11|[YFS]9|C6|[FY]7|Y8|Y1[25])(?:[);/ ]|$)'
+  regex: 'SUGAR (?:C[12]1|S11|C11s|[YF]11|[YFS]9|C6|[FY]7|Y8|Y1[25])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'SUGAR Y([78]) MAX(?:[);/ ]|$)'
       model: 'Y$1 Max'
     - regex: 'SUGAR F7 Mini(?:[);/ ]|$)'
       model: 'F7 Mini'
-    - regex: 'SUGAR (C[12]1|[YF]11|[YFS]9|C6|Y7|Y1[25])(?:[);/ ]|$)'
+    - regex: 'SUGAR (C[12]1|S11|C11s|[YF]11|[YFS]9|C6|Y7|Y1[25])(?:[);/ ]|$)'
       model: '$1'
 
 
@@ -18205,6 +18207,12 @@ UNIWA:
 # ANDOWL
 Andowl:
   regex: 'ANDOWL-(Q[45])(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
+
+# Silelis (silelis.com)
+Silelis:
+  regex: 'Silelis[ _](T-1)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
